<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/img_clock"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_wall_clock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/img_clock"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="10dp"
                android:text="@string/_8_hours"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/img_date"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_90_days_access"
                android:layout_toEndOf="@+id/img_date"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/img_begin_circle"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/session" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_sessions"
                android:layout_toEndOf="@+id/img_begin_circle"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginVertical="20dp"
            android:background="@color/view_color">

        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_will_i_learn"
            android:fontFamily="@font/roboto_black"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tv_whatwill_i_learn_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_will_i_learn_android_details"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginVertical="20dp"
            android:background="@color/view_color">

        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Skill_you_gain"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/purple_200"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tv_skill_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_programming"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tv_skill_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_r_programming_and_its_packages"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tv_skill_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_algorithm"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>








<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.core.widget.NestedScrollView-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".SummaryFragment"-->

<!--    >-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        >-->
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/_8_hours"-->
<!--        android:fontFamily="@font/roboto_regular"-->
<!--        android:textColor="@color/black"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:textSize="15sp"-->
<!--        android:textStyle="bold"-->
<!--        />-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/_90_days_access"-->
<!--            android:fontFamily="@font/roboto_regular"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:textSize="15sp"-->
<!--            android:textStyle="bold"-->
<!--            />-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/_3_sessions"-->
<!--            android:fontFamily="@font/roboto_regular"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:textSize="15sp"-->
<!--            android:textStyle="bold"-->
<!--            />-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/what_will_i_learn"-->
<!--            android:fontFamily="@font/roboto_thin"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:textSize="15sp"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/tv_whatwill_i_learn_details"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/what_will_i_learn_android_details"-->
<!--            android:fontFamily="@font/roboto_regular"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:textSize="15sp"-->
<!--            />-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/Skill_you_gain"-->
<!--            android:fontFamily="@font/roboto_thin"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:textSize="15sp"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/tv_skill_1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/_1_programming"-->
<!--            android:fontFamily="@font/roboto_regular"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:textSize="15sp"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/tv_skill_2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/_2_r_programming_and_its_packages"-->
<!--            android:fontFamily="@font/roboto_regular"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:textSize="15sp"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/tv_skill_3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/_3_algorithm"-->
<!--            android:fontFamily="@font/roboto_regular"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:textSize="15sp"-->
<!--            />-->
<!--    </LinearLayout>-->
<!--</androidx.core.widget.NestedScrollView>-->