<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SummaryActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_startSession"
        android:layout_marginBottom="10dp"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <include
                        android:id="@+id/toolbar"
                        layout="@layout/custom_toolbar" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_summary"
                        android:layout_below="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:scaleType="fitXY">

                    </androidx.appcompat.widget.AppCompatImageView>
                    <TextView
                        android:id="@+id/tv_subject"
                        android:layout_below="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/math"
                        android:gravity="center"
                        android:paddingBottom="40dp"
                        android:background="@drawable/imageview_gradient"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/rounded_corner"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_2_sessions_4_chapters"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="30dp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_regular"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:text="4.1"
                                android:textSize="16sp"
                                />
                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:src="@drawable/star"
                                android:layout_marginTop="4dp"
                                android:layout_marginStart="4dp"
                                android:layout_gravity="center_vertical"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:text="@string/_7k_learner"
                                android:textSize="16sp"
                                android:layout_marginStart="15dp"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/selector_tabs"
                android:layout_width="match_parent"
                app:tabGravity="fill"
                app:tabMode="fixed"
                android:background="@color/tab_background"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="exitUntilCollapsed">
            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/chapter_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <TextView
        android:id="@+id/tv_startSession"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_200"
        android:text="@string/startsession"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        />
</RelativeLayout>



<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    tools:context=".SummaryActivity">-->
<!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_above="@+id/tv_startSession"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        >-->

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:fitsSystemWindows="true">-->
<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="160dp"-->
<!--            app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
<!--            >-->
<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent">-->
<!--                <TextView-->
<!--                    android:id="@+id/tv_subject"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:text="Maths"-->
<!--                    android:gravity="center"-->
<!--                    android:background="@drawable/imageview_gradient"-->
<!--                    android:textSize="25sp"-->
<!--                    android:textColor="@color/white"-->
<!--                    />-->
<!--            </RelativeLayout>-->
<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->

<!--        <com.google.android.material.tabs.TabLayout-->
<!--            android:id="@+id/selector_tabs"-->
<!--            android:layout_width="match_parent"-->
<!--            app:tabGravity="fill"-->
<!--            app:tabMode="fixed"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_scrollFlags="exitUntilCollapsed">-->
<!--        </com.google.android.material.tabs.TabLayout>-->
<!--    </com.google.android.material.appbar.AppBarLayout>-->
<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:clipToPadding="false"-->
<!--        android:fillViewport="true"-->
<!--        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"-->
<!--        >-->
<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <androidx.viewpager.widget.ViewPager-->
<!--                android:id="@+id/chapter_viewpager"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </RelativeLayout>-->
<!--    </androidx.core.widget.NestedScrollView>-->

<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
<!--<TextView-->
<!--    android:id="@+id/tv_startSession"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="60dp"-->
<!--    android:layout_alignParentBottom="true"-->
<!--    android:background="@color/purple_200"-->
<!--    android:text="@string/startsession"-->
<!--    android:textColor="@color/white"-->
<!--    android:textSize="20sp"-->
<!--    android:gravity="center"-->
<!--    />-->
<!--</RelativeLayout>-->